fix(ios9): fixed the overflow scroll issue with ios 9 where the user could not scroll down at all

--- a/app/client/stylesheets/components/pu-main.sass
+++ b/app/client/stylesheets/components/pu-main.sass
@@ -12,7 +12,9 @@ body
 .pu-main
     position: relative
     display: block
+    -webkit-overflow-scrolling: touch
     overflow-x: hidden
+    overflow-y: auto
 
     .pu-modal,
     .pu-app
