--- a/app/client/stylesheets/defaults/body.sass
+++ b/app/client/stylesheets/defaults/body.sass
@@ -1,8 +1,5 @@
 body
     background-color: $color-background-tertiery
-    -webkit-overflow-scrolling: touch
-    overflow-x: hidden
-    overflow-y: auto
 
     #pu-notifycontainer
         position: fixed
